TEST_PROGRAMS/VALID/08/plusEquals.go
package main;
func main(){
    var arr [5]int;
    arr[1] += 15;
}
