TEST_PROGRAMS/INVALID/08/badArrayDec.go
package main;
var x [1+1]int;
